--- a/frontend/src/fonts.css
+++ b/frontend/src/fonts.css
@@ -1,11 +1,12 @@
 .font-title {
-    font-family: "Andada Pro", serif;
-    font-optical-sizing: auto;
-    font-style: normal;
+  font-family: 'Andada Pro', serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 .font-text {
-    font-family: "Shadows Into Light", cursive;
-    font-weight: 400;
-    font-style: normal;
+  font-family: 'Indie Flower', cursive;
+  font-weight: 400;
+  font-style: normal;
 }
+
